--- a/JapanSaber.csproj
+++ b/JapanSaber.csproj
@@ -57,8 +57,7 @@
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>..\..\..\Steam\steamapps\common\Beat Saber\Libs\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SongCore">
       <HintPath>..\..\..\Steam\steamapps\common\Beat Saber\Plugins\SongCore.dll</HintPath>
@@ -98,6 +97,9 @@
       <HintPath>..\..\..\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="UnityEngine.TextCoreModule">
+      <HintPath>..\..\..\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.TextCoreModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.TextRenderingModule">
       <HintPath>..\..\..\Steam\steamapps\common\Beat Saber\Beat Saber_Data\Managed\UnityEngine.TextRenderingModule.dll</HintPath>
       <Private>False</Private>
@@ -124,7 +126,8 @@
     <Compile Include="Configuration\SongsStore.cs" />
     <Compile Include="Configuration\Playlist.cs" />
     <Compile Include="Configuration\SongInfos.cs" />
-    <Compile Include="Modification\Modifer.cs" />
+    <Compile Include="Modification\FontsModifier.cs" />
+    <Compile Include="Modification\SongInfosModifier.cs" />
     <Compile Include="Modification\ModificationFormat.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Logger.cs" />
@@ -143,10 +146,10 @@
     <None Include=".gitignore" />
     <EmbeddedResource Include="Configuration\UI\BSML\About.bsml" />
     <EmbeddedResource Include="Configuration\UI\BSML\Settings.bsml" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Refs\" />
-    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="BuildTargets.targets" />
