--- a/BuildTargets.targets
+++ b/BuildTargets.targets
@@ -21,6 +21,8 @@
       <Output TaskParameter="CommitShortHash" PropertyName="CommitShortHash" />
     </GetCommitHash>
     <Copy SourceFiles="$(OutputPath)$(AssemblyName).dll" DestinationFiles="$(IntermediateOutputPath)zip\Plugins\$(AssemblyName).dll" />
+    <Copy SourceFiles="$(OutputPath)Libs/libwebp.dll" DestinationFiles="$(IntermediateOutputPath)zip\Libs\libwebp.dll" />
+    <Copy SourceFiles="$(OutputPath)Imazen.WebP.dll" DestinationFiles="$(IntermediateOutputPath)zip\Libs\Imazen.WebP.dll" />
     <GetManifestInfo ErrorOnMismatch="False">
       <Output TaskParameter="PluginVersion" PropertyName="PluginVersion" />
       <Output TaskParameter="GameVersion" PropertyName="GameVersion" />
